--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "webpack": "^4.42.0"
   },
   "scripts": {
-    // "start": "react-scripts start",
-    "start": "nodemon server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
