--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack": "^4.42.0"
   },
   "scripts": {
-    "start": "react-scripts start && nodemon server/server.js && python server/cv.py",
+    "start": "nodemon server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
